Compare checksum counts directly in redis_verify
Moved shas_to_redis_sadd.rb to redis_sha_import.rb since it no longer
uses redis sets.

Used HINCRBY with gem name and SHA checksum to store a checksum count
for a name, checksum pair.

Count number of matching checksums for the S3 checksum directly instead
of indirectly.

This removes 1984 prerelease gems from the
unverified.2_or_fewer_checksums.txt list while adding four:

    bundler-1.2.0.pre.gem 2
    feedzirra-0.2.0.rc1.gem 2
    railties-3.0.0.beta3.gem 2
    rhodes-3.1.0.beta.4.gem 1

All gems in the list are according to the updated command in #1.

Thanks to David Heath for checking my work.

Fixes #1

--- a/README.rdoc
+++ b/README.rdoc
@@ -10,7 +10,7 @@ These can be found in unverified.2_or_fewer_checksums.txt
 
 All the gems with 2 or fewer checksums are pre-release versions according to:
 
-  ruby -ne 'gets =~ /-(.*?)\.gem/; puts $_ unless $1 =~ /\w/' \
+  ruby -ne 'gets =~ /-(.*?)\.gem/; puts $_ unless $1 =~ /[a-zA-Z]' \
     unverified.2_or_fewer_checksums.txt
 
 This finds the gem version and checks it for any alphabet character.  If it
